<resources>
    <string name="app_name">List Needs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_text">Unesite proizvod</string>
    <string name="enter_item">Unesite proizvod</string>
    <string name="add_item">Unesite ime proizvoda</string>
    <string name="quty">Unesite kolicinu</string>
    <string name="desc">Unesite opis proizvoda</string>
    <string name="price">Unesite okvirnu cenu</string>
    <string name="savebtn">Snimi</string>
</resources>