<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/linearlayout"
    android:layout_height="match_parent"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="23dp">



            
            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
               android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_height="wrap_content">

            </TextView>

            <EditText
                android:id="@+id/entername"
                android:layout_width="match_parent"
                android:layout_below="@+id/txt1"
                android:hint="@string/add_item"
                android:layout_height="wrap_content">

            </EditText>
            <EditText
                android:inputType="number"
                android:id="@+id/enterquiantity"
                android:layout_width="match_parent"
                android:layout_below="@+id/entername"
                android:hint="@string/quty"
                android:layout_height="wrap_content">

            </EditText>
            <EditText
                android:id="@+id/enterdescription"
                android:layout_width="match_parent"
                android:layout_below="@+id/enterquiantity"
                android:hint="@string/desc"
                android:layout_height="wrap_content">

            </EditText>

            <EditText
                android:id="@+id/enterprice"
                android:inputType="number"

                android:layout_width="match_parent"
                android:layout_below="@+id/enterdescription"
                android:hint="@string/price"
                android:layout_height="wrap_content">

            </EditText>
            <Button
                android:id="@+id/snimi"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/savebtn"
                android:layout_below="@+id/enterprice"
                android:layout_height="wrap_content">

            </Button>

        </RelativeLayout>




    </androidx.cardview.widget.CardView>

</LinearLayout>